--- a/citations.bib
+++ b/citations.bib
@@ -1,5 +1,5 @@
 
-@article{deguass_cite,
+@article{degauss_cite,
 	title = {Decentralized and reproducible geocoding and characterization of community and environmental exposures for multisite studies},
 	volume = {25},
 	rights = {http://creativecommons.org/licenses/by-nc/4.0/},
