add mising package

--- a/geocoder_evaluation.qmd
+++ b/geocoder_evaluation.qmd
@@ -20,6 +20,8 @@ library(sf)
 library(tigris)
 library(kableExtra)
 library(glue)
+library(arrow)
+library(sfarrow) 
 
 options(knitr.kable.NA = '—')
 
